<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClinic"
        android:text="@string/five"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.309"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClinic"
        android:text="@string/four"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/five"
        app:layout_constraintRight_toLeftOf="@+id/five"
        app:layout_constraintTop_toTopOf="@id/five" />

    <Button
        android:id="@+id/six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClinic"
        android:text="@string/six"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/five"
        app:layout_constraintLeft_toRightOf="@id/five"
        app:layout_constraintTop_toTopOf="@id/five" />

    <Button
        android:id="@+id/eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClinic"
        android:text="@string/eight"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/five"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClinic"
        android:text="@string/seven"
        app:layout_constraintBottom_toBottomOf="@id/eight"
        app:layout_constraintBottom_toTopOf="@id/four"
        app:layout_constraintRight_toLeftOf="@id/eight"
        app:layout_constraintTop_toTopOf="@id/eight"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClinic"
        android:text="@string/nine"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/eight"
        app:layout_constraintLeft_toRightOf="@id/eight"
        app:layout_constraintTop_toTopOf="@id/eight" />

    <Button
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClinic"
        android:text="@string/two"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/four" />

    <Button
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClinic"
        android:text="@string/one"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/two"
        app:layout_constraintRight_toLeftOf="@id/two"
        app:layout_constraintTop_toTopOf="@id/two" />

    <Button
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClinic"
        android:text="@string/three"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/two"
        app:layout_constraintLeft_toRightOf="@id/two"
        app:layout_constraintTop_toTopOf="@id/two" />

    <Button
        android:id="@+id/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClinic"
        android:text="@string/zero"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/two" />

    <Button
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/minus"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/nine"
        app:layout_constraintLeft_toRightOf="@id/nine"
        app:layout_constraintTop_toTopOf="@id/nine"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/plus"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/six"
        app:layout_constraintLeft_toRightOf="@id/six"
        app:layout_constraintTop_toTopOf="@id/six"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/equel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/equel"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/three"
        app:layout_constraintLeft_toRightOf="@id/three"
        app:layout_constraintTop_toTopOf="@id/three"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/devite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/devite"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/eight"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplay"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/devite"
        app:layout_constraintBottom_toTopOf="@id/nine"
        app:layout_constraintLeft_toRightOf="@id/devite"
        app:layout_constraintTop_toTopOf="@id/devite"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"

        android:text="@string/delete"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/devite"
        app:layout_constraintRight_toLeftOf="@id/devite"
        app:layout_constraintTop_toTopOf="@id/devite"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dot"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/zero"
        app:layout_constraintLeft_toRightOf="@id/zero"
        app:layout_constraintTop_toTopOf="@id/zero" />

    <Button
        android:id="@+id/mod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mod"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/zero"
        app:layout_constraintRight_toLeftOf="@id/zero"
        app:layout_constraintTop_toTopOf="@id/zero"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="130dp"
        android:hint="result"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/nine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/devite"
        android:freezesText="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>